--- a/src/styles/elements/responsive.css
+++ b/src/styles/elements/responsive.css
@@ -1,19 +1,14 @@
 /* Responsive styles */
 @media (max-width: 1400px) {
-  .element-card {
-    width: 70px;
-    height: 70px;
-  }
-  
   .dashed-connector {
     width: 15px;
     height: 76px;
   }
-  
+
   .f-block-container {
     margin-left: 2px;
   }
-  
+
   .periodic-table-container {
     padding-left: 48px;
     padding-right: 48px;
@@ -21,58 +16,36 @@
 }
 
 @media (max-width: 1200px) {
-  .element-card {
-    width: 65px;
-    height: 65px;
-  }
-  
   .dashed-connector {
     width: 15px;
     height: 76px;
   }
-  
   .f-block-container {
     margin-left: 2px;
   }
 }
 
 @media (max-width: 992px) {
-  .element-card {
-    width: 60px;
-    height: 60px;
-    padding: 2px;
-  }
-  
   .dashed-connector {
     width: 12px;
     height: 76px;
   }
-  
   .element-card .text-lg {
     font-size: 0.9rem;
   }
-  
   .f-block-container {
     margin-left: 2px;
   }
 }
 
 @media (max-width: 768px) {
-  .element-card {
-    width: 55px;
-    height: 55px;
-    padding: 2px;
-  }
-  
   .dashed-connector {
     width: 10px;
     height: 76px;
   }
-  
   .f-block-container {
     margin-left: 2px;
   }
-  
   .connector-line::before,
   .connector-line::after {
     border-left-width: 1.5px;
@@ -80,25 +53,16 @@
 }
 
 @media (max-width: 640px) {
-  .element-card {
-    width: 50px;
-    height: 50px;
-    padding: 2px;
-  }
-  
   .dashed-connector {
     width: 8px;
     height: 76px;
   }
-  
   .element-card .text-lg {
     font-size: 0.75rem;
   }
-  
   .f-block-container {
     margin-left: 2px;
   }
-  
   .connector-line::before,
   .connector-line::after {
     border-left-width: 1px;
@@ -106,21 +70,13 @@
 }
 
 @media (max-width: 480px) {
-  .element-card {
-    width: 45px;
-    height: 45px;
-    padding: 1px;
-  }
-  
   .dashed-connector {
     width: 7px;
     height: 76px;
   }
-  
   .element-card .text-lg {
     font-size: 0.7rem;
   }
-  
   .element-card .text-xs {
     font-size: 0.65rem;
   }
